<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_add_pearson_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="32sp"
        android:text="Add new famous pearson"


        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pearson_name_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_pearson_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pearson_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin"
            android:hint="@string/et_pearson_name_hint" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pearson_date_birth_death_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/til_pearson_name_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pearson_date_birth_death_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/et_pearson_date_birth_death_hint"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pearson_description_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/til_pearson_date_birth_death_input"
        app:layout_constraintBottom_toTopOf="@id/til_pearson_quote_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pearson_description_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:hint="@string/et_pearson_description_hint"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pearson_quote_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/til_pearson_description_input"
        app:layout_constraintBottom_toTopOf="@id/til_pearson_imageURL_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pearson_quote_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:hint="@string/et_pearson_quote_hint"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pearson_imageURL_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/til_pearson_quote_input"
        app:layout_constraintBottom_toTopOf="@id/btn_newPearson_save">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pearson_imageURL_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:hint="@string/et_pearson_imageURL_hint"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_newPearson_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_pearson_imageURL_input"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin"
        android:text="@string/btn_save_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>